--- a/main.scss
+++ b/main.scss
@@ -1,1 +1,89 @@
+*{
+  box-sizing:border-box;
+}
+
+.people {
+  display: grid;
+  grid-template-columns: repeat(2, 200px);
+  justify-content: center;
+  gap: 30px 40px;
+  padding: 30px 35px;
+
+  @media(min-width: 1000px){
+    grid-template-columns: repeat(4, 200px);
+  }
+}
+
+.photo{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin-bottom: 10px;
+} 
+
+.person img.person__photo {
+  width: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+  aspect-ratio: 1 / 1;
+}
+
+.person img.person__photo:hover {
+  transform: scale(1.2);
+  border-radius: 60px;
+  transition: all 1s;
+}
+
+.rank {
+  position: absolute;
+  padding: 7px 11px;
+  color:  #8b0000;
+  background-color: #fff;
+  top: 40%;
+  right: 5px;
+  transform: translateY(-40%);
+  border-radius: 50%;
+}
+
+.person:hover{
+  transition: opacity 0.2s ease-in-out;
+  scale: 1.2;
+  padding: 15px 15px 15px;
+  background-color: #eee;
+  border-radius: 12px;
+}
+
+.name {
+  color: #2F4F4F;
+  font-weight: bold;
+  display: flex;
+  font-family: Arial;
+  font-size: 20px;
+  line-height: 23px;
+  justify-content: center;
+}
+
+.extra  {
+  margin-top: 10px;
+  color: #000000;
+  font-family: Arial;
+  font-size: 21.6px;
+  line-height: 24.84px;
+  text-align: center;
+  visibility: hidden;
+
+  transition: opacity 0.2s ease-in-out;
+}
+
+.person:hover .extra {
+  visibility: visible;
+  display: block;
+  
+  transition: opacity 0.2s ease-in-out;
+}
+
+
+
+
 
