--- a/main.scss
+++ b/main.scss
@@ -9,9 +9,17 @@
   gap: 30px 40px;
   padding: 30px 35px;
 
-  @media(min-width: 1000px){
+  @media(min-width: 750px){
+    grid-template-columns: repeat(2, 200px);
+}
+
+@media(min-width: 1000px){
     grid-template-columns: repeat(4, 200px);
-  }
+}
+
+ @media(min-width: 1500px){
+    grid-template-columns: repeat(4, 200px);
+}
 }
 
 .photo{
